--- a/package.json
+++ b/package.json
@@ -27,12 +27,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.2.11",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngneat/until-destroy": "^10.0.0",
+    "@ngrx/operators": "^20.1.0",
+    "@ngrx/signals": "^20.1.0",
+    "@primeuix/themes": "^1.2.5",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
